# advent_of_code2024

./: CMakeLists.txt  README.md
01/: CMakeLists.txt
01/src/: main.cpp
02/: CMakeLists.txt
02/src/: main.cpp
lib/: CMakeLists.txt
lib/inc/: conversion.hpp
lib/src/: conversion.cpp
